--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
     </script>
 </head>
 <body>
-    <img src="./BF_Jack_Daniel's_Honey_200ML.jpg" alt="">
+    <img src="./BF_Jack_Daniel's_Honey_200ML.jpg" alt="" oncontextmenu="return false" style="-webkit-touch-callout:none">
 </body>
 </html>
