--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
     <style>
-        body { -webkit-touch-callout:none;}
+        body {
+            -webkit-touch-callout: none;
+            -webkit-user-select: none;
+            -khtml-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+        }
     </style>
-    <script type="text/javascript">
-        // 안드로이드 우측 버튼 비활성
-        $(document).bind("contextmenu", function (e) {
-            return false;
-        });
-    </script>
 </head>
 <body>
-    <img src="./BF_Jack_Daniel's_Honey_200ML.jpg" alt="" oncontextmenu="return false" style="-webkit-touch-callout:none">
+    <img src="./BF_Jack_Daniel's_Honey_200ML.jpg" alt="" >
 </body>
 </html>
