--- a/index.html
+++ b/index.html
@@ -21,16 +21,19 @@
         window.onload = function(){
             var body = document.body;
             var layer = document.createElement("div");
-            body.prepend(layer);
+            var img = document.querySelector("img");
+            var imgW = img.offsetWidth;
+            var imgH = img.offsetHeight;
 
+            body.prepend(layer);
             layer.style.zIndex = '999';
-            layer.style.position = 'fixed';
-            layer.style.width = '100vw';
-            layer.style.height = '100vh';
+            layer.style.position = 'absolute';
+            layer.style.width = imgW + 'px';
+            layer.style.height = imgH + 'px';
             layer.style.backgroundColor = 'red';
-            layer.style.opacity = '.1';
-            layer.style.top = '0';
-            layer.style.left = '0';
+            layer.style.opacity = '.3';
+            // layer.style.top = '0';
+            // layer.style.left = '0';
         }
     </script>
 </body>
