--- a/index.html
+++ b/index.html
@@ -5,16 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        body {
-            -webkit-touch-callout: none;
-        }
-    </style>
-
-    <script></script>
-
 </head>
-<body oncontextmenu="return false">
+<body>
     <img src="./BF_Jack_Daniel's_Honey_200ML.jpg" alt="">
 
     <script>
