--- a/index.html
+++ b/index.html
@@ -1,14 +1,59 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <img src="./BF_Jack_Daniel's_Honey_200ML.jpg" alt="">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<script type="text/javascript">
+    // 안드로이드 우측 버튼 비활성
+    $(document).bind("contextmenu", function (e) {
+        return false;
+    });
+var omitformtags=["input", "textarea", "select"]
 
+omitformtags=omitformtags.join("|")
+
+function disableselect(e){
+if (omitformtags.indexOf(e.target.tagName.toLowerCase())==-1)
+return false
+}
+
+function reEnable(){
+return true
+}
+
+if (typeof document.onselectstart!="undefined")
+document.onselectstart=new Function ("return false")
+else{
+document.onmousedown=disableselect
+document.onmouseup=reEnable
+}
+    //F12 개발자도구 비활성
+    $(document).bind('keydown',function(e){
+        if ( e.keyCode == 123) {
+            e.preventDefault();
+            e.returnValue = false;
+        }
+    });
+</script>
+
+<title>
+디아블로 데블스 컬랙션
+</title>
+</head>
+ 
+ <style>
+* {margin:auto; padding:0;}
+body {background-color:black;}
+	 /* 아이폰 이미지 저장 방지 */
+body { -webkit-touch-callout:none;}
+	 .img {pointer-events : none;}
+</style>
+
+
+<body oncontextmenu='return false' onselectstart='return false' ondragstart='return false'>
+
+
+<img src="AY_Diablo_Devils_Collection
+.jpg" width="100%" align="center" />
     <script>
         window.onload = function(){
             var body = document.body;
@@ -23,8 +68,9 @@
             layer.style.width = imgW + 'px';
             layer.style.height = imgH + 'px';
             layer.style.backgroundColor = 'red';
-            layer.style.opacity = '.3';
+            layer.style.opacity = '0';
         }
     </script>
 </body>
+	
 </html>
