--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ body { -webkit-touch-callout:none;}
 <body oncontextmenu='return false' onselectstart='return false' ondragstart='return false'>
 
 
-<img src="AY_Diablo_Devils_Collection
+<img src="BF_Jack_Daniel's_Honey_200ML
 .jpg" width="100%" align="center" />
     <script>
         window.onload = function(){
